[package]
name = "slog-retry"
# Also increase the version in src/lib html root attribute
version = "0.1.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "slog Drain that reconnects on errors and tries again"
documentation = "https://docs.rs/slog-retry"
repository = "https://github.com/vorner/slog-retry"
readme = "README.md"
keywords = ["logging", "slog", "retry"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/slog-retry" }
appveyor = { repository = "vorner/slog-retry" }

[dependencies]
failure = "0.1.1"
slog = "2.0"

[dev-dependencies]
slog-async = "2.3"
slog-json = "2.2"
version-sync = "~0.5"
